Refractored matach qualification